--- a/FinborneGenericCache/FinborneGenericCache.csproj
+++ b/FinborneGenericCache/FinborneGenericCache.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Compile Remove="Model\GenericLinkedList.cs" />
+  </ItemGroup>
+
 </Project>
